--- a/car_information.ipynb
+++ b/car_information.ipynb
@@ -5,12 +5,18 @@
    "id": "c61a5f72",
    "metadata": {},
    "source": [
-    "# EDA OF CAR INFORMATION DATASETS"
+    "# EDA OF CAR INFORMATION DATASETS\n",
+    "\n",
+    "If you enjoyed this analysis, please give it a vote and drop a comment—I’d love to hear what you think or any ideas you have!\n",
+    "\n",
+    "Before diving into the analysis, I want to introduce the dataset I’m working with. It contains 399 entries with 9 key features related to automobiles, including things like engine size, weight, horsepower, and fuel efficiency. I chose this dataset because it provides a balanced mix of technical specifications and performance metrics, which makes it perfect for predicting something meaningful—like a car’s MPG.\n",
+    "\n",
+    "By exploring this dataset, I hope to uncover patterns and relationships between these features and fuel efficiency. Understanding these trends can help in designing better, more efficient vehicles in the future. For me, this dataset isn’t just numbers—it’s a glimpse into how cars work and how small changes in design can impact performance and sustainability."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "705b6f41",
    "metadata": {},
    "outputs": [],
@@ -25,6 +31,7 @@
     "from IPython.display import display, Markdown\n",
     "\n",
     "# Load dataset\n",
+    "\n",
     "df = pd.read_csv(r\"C:\\Users\\abidh\\OneDrive\\Desktop\\datasets\\Automobile.csv\")"
    ]
   },
@@ -38,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "id": "9f650487",
    "metadata": {},
    "outputs": [
@@ -97,7 +104,7 @@
          "type": "string"
         }
        ],
-       "ref": "24967be6-ea3d-4ef0-928c-4aa2b09a14ad",
+       "ref": "dac8a9a3-bd03-4a49-8a41-3914dc4b0c6a",
        "rows": [
         [
          "0",
@@ -276,7 +283,7 @@
        "4    3449          10.5          70    usa  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "4c05b1b9",
    "metadata": {},
    "outputs": [
@@ -371,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "11c49628",
    "metadata": {},
    "outputs": [
@@ -499,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "f6b28cf0",
    "metadata": {},
    "outputs": [
@@ -563,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "ae8d10a7",
    "metadata": {},
    "outputs": [
@@ -603,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "801a015c",
    "metadata": {},
    "outputs": [
@@ -679,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "01c097b6",
    "metadata": {},
    "outputs": [
@@ -732,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "76ba5a7a",
    "metadata": {},
    "outputs": [
@@ -789,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "f43604ea",
    "metadata": {},
    "outputs": [],
@@ -805,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "e49c6776",
    "metadata": {},
    "outputs": [
@@ -891,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "a8b15480",
    "metadata": {},
    "outputs": [
@@ -930,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "3ca9b174",
    "metadata": {},
    "outputs": [
@@ -978,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "id": "83181a4a",
    "metadata": {},
    "outputs": [],
@@ -1002,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "cabdc53a",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": null,
    "id": "cfe91491",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "e15a9c27",
    "metadata": {},
    "outputs": [
@@ -1132,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "id": "ed815dca",
    "metadata": {},
    "outputs": [
@@ -1178,7 +1185,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.12"
   }
  },
