--- a/eda_kaggle_grandmaster.ipynb
+++ b/eda_kaggle_grandmaster.ipynb
@@ -760,34 +760,8 @@
     "\n",
     "# 1. PCA Scatter Plot\n",
     "ax1 = axes[0]\n",
-    "scatter = ax1.scatter(X_pca[:, 0], X_pca[:, 1], c=df['Cluster'], cmap='tab10', \n",
-    "\n",
-    "1"
+    "scatter = ax1.scatter(X_pca[:, 0], X_pca[:, 1], c=df['Cluster'], cmap='tab10', "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9cae6201",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfea7f6d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2118563d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
